syntax="proto3";

option go_package="github.com/giulioborghesi/raft-implementation/src/service";

// Raft service definition
service Raft {
    // Append a log entry to the log
    rpc AppendEntry(AppendEntryRequest) returns (AppendEntryReply) {}

    // Request vote from server
    rpc RequestVote(RequestVoteRequest) returns (RequestVoteReply) {}
}

message LogEntry {
    int64 entryTerm = 1;
    string payload = 2;
}

message AppendEntryRequest {
    int64 serverTerm = 1;
    int64 serverID = 2;
    int64 prevEntryTerm = 3;
    int64 prevEntryIndex = 4;
    repeated LogEntry entries = 5;
}

message AppendEntryReply {
    int64 currentTerm = 1;
    bool success = 2;
}

message RequestVoteRequest {
    int64 serverTerm = 1;
    int64 serverID = 2;
}

message RequestVoteReply {
    bool success = 1;
    int64 serverTerm = 2;
}
